--- a/templates/home/css/owl.theme.css
+++ b/templates/home/css/owl.theme.css
@@ -58,7 +58,7 @@
 	-webkit-border-radius: 20px;
 	-moz-border-radius: 20px;
 	border-radius: 20px;
-	background: #fff;
+	background: #d9d9d9;
 }
 
 .owl-theme .owl-controls .owl-page.active span{
